[package]
name = "lstm_with_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = {version="0.5.1" }
candle-nn = "0.5.1"
yahoo-finance = "0.3.0"
tokio = { version = "1", features = ["full"] } # full
axum = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
polars = { version = "0.41.3", features = [] }
polars-io = { version = "0.41.3", features = ["json"] }
